--- a/language-dot.cabal
+++ b/language-dot.cabal
@@ -1,5 +1,5 @@
 name:        language-dot
-version:     0.0.0
+version:     0.0.1
 category:    Language
 synopsis:    A library for the analysis of Graphviz DOT files
 description: A library for the analysis of Graphviz DOT files.
@@ -18,6 +18,7 @@ library
     src
 
   exposed-modules:
+    Language.Dot
     Language.Dot.Parser
     Language.Dot.Syntax
 
