--- a/language-dot.cabal
+++ b/language-dot.cabal
@@ -20,11 +20,13 @@ library
   exposed-modules:
     Language.Dot
     Language.Dot.Parser
+    Language.Dot.Pretty
     Language.Dot.Syntax
 
   build-depends:
     base   >= 3 && < 5,
-    parsec == 3.*
+    parsec == 3.*,
+    pretty == 1.*
 
   ghc-options: -Wall
   if impl(ghc >= 6.8)
