--- a/language-dot.cabal
+++ b/language-dot.cabal
@@ -31,7 +31,7 @@ library
 
   build-depends:
     base   == 4.*,
-    mtl    == 1.*,
+    mtl    == 1.* || == 2.*,
     parsec == 3.*,
     pretty == 1.*
 
