--- a/language-dot.cabal
+++ b/language-dot.cabal
@@ -62,14 +62,18 @@ test-suite test
   main-is: Main.hs
   other-modules:
     Language.Dot.Parser
+    Language.Dot.Pretty
     Language.Dot.Syntax
   hs-source-dirs: test, src
   ghc-options: -Wall
   cpp-options: -DTEST
   build-depends:
-    base    == 4.*,
-    parsec  == 3.*
-
+    base             == 4.*,
+    generic-random   == 1.2.*,
+    parsec           == 3.*,
+    pretty           == 1.*,
+    tasty            >= 1.1 && <= 1.3,
+    tasty-quickcheck == 0.10.*
 source-repository head
   type:     git
   location: https://github.com/bsl/language-dot
