--- a/language-dot.cabal
+++ b/language-dot.cabal
@@ -73,7 +73,10 @@ test-suite test
     parsec           == 3.*,
     pretty           == 1.*,
     tasty            >= 1.1 && <= 1.3,
-    tasty-quickcheck == 0.10.*
+    tasty-hunit      == 0.10.*,
+    tasty-quickcheck == 0.10.*,
+    tasty-smallcheck >= 0.7 && <0.9,
+    smallcheck       == 1.1.*
 source-repository head
   type:     git
   location: https://github.com/bsl/language-dot
