--- a/language-dot.cabal
+++ b/language-dot.cabal
@@ -59,13 +59,15 @@ test-suite test
   main-is: Main.hs
   other-modules:
     Language.Dot.Parser
+    Language.Dot.Pretty
     Language.Dot.Syntax
   hs-source-dirs: test, src
   ghc-options: -Wall
   cpp-options: -DTEST
   build-depends:
     base    == 4.*,
-    parsec  == 3.*
+    parsec  == 3.*,
+    pretty
 
 source-repository head
   type:     git
