--- a/language-dot.cabal
+++ b/language-dot.cabal
@@ -1,3 +1,4 @@
+cabal-version: 3.0
 name:         language-dot
 version:      0.1.2
 category:     Language
@@ -6,12 +7,10 @@ description:  A library for the analysis and creation of Graphviz DOT files.
 author:       Brian Lewis <brian@lorf.org>
 maintainer:   Ben Gamari <ben@smart-cactus.org>
 copyright:    (c) 2009 Galois, Inc.
-license:      BSD3
+license:      BSD-3-Clause
 license-file: LICENSE
 tested-with:  GHC==9.2.3, GHC==9.4.5, GHC==9.6.2
-
-cabal-version: >= 1.8
-build-type:    Simple
+build-type:   Simple
 
 flag executable
   description: Build the `ppdot' executable.
@@ -37,6 +36,8 @@ library
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
 
+  default-language: Haskell2010
+
 executable ppdot
   if flag(executable)
     buildable: True
@@ -55,6 +56,8 @@ executable ppdot
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
 
+  default-language: Haskell2010
+
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
@@ -69,6 +72,7 @@ test-suite test
     base    == 4.*,
     parsec  == 3.*,
     pretty
+  default-language: Haskell2010
 
 source-repository head
   type:     git
